tests/error/bit_cast_padding1.bz
// error: value type '[uint8, uint16]' and result type 'uint32' have incompatible paddings in bit cast
// note: value type has a padding of 1 byte at offset 1, but result type doesn't
function test()
{
	let t: [uint8, uint16] = [ 0, 0 ];
	let _ = __builtin_bit_cast(uint32, t);
}
